// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessRoster should render no results component: no_results 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bZQynM jtjfSu"
      >
        Nenhum resultado para sua busca
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bZQynM jtjfSu"
    >
      Nenhum resultado para sua busca
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProcessRoster should render the component correctly: regular_list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="sc-ifAKCX eXALfk"
      >
        <li
          class="sc-EHOje dSogAF"
        >
          <div
            class="sc-bdVaJa cWtrlz"
          >
            <a
              href="/process-detail/process=c05a14b8-9f98-4e4d-908c-050e0c46a7f2"
              style="align-items: center; display: flex; flex-wrap: wrap; text-decoration: none; width: 100%;"
            >
              <div
                class="sc-bwzfXH EtGxv"
              >
                <img
                  alt=""
                  src="https://via.placeholder.com/80"
                />
              </div>
              <div
                class="sc-bwzfXH dGJtax"
              >
                <p
                  class="sc-htpNat cWKNlF"
                >
                  Número
                </p>
                <p
                  class="sc-bxivhb Cdfip"
                >
                  SOFT 2020/00001
                </p>
              </div>
              <div
                class="sc-bwzfXH EtGxv"
              >
                <p
                  class="sc-htpNat cWKNlF"
                >
                  Assunto
                </p>
                <p
                  class="sc-bxivhb Cdfip"
                >
                  Licença
                </p>
              </div>
              <div
                class="sc-bwzfXH dGJtax"
              >
                <p
                  class="sc-htpNat cWKNlF"
                >
                  Interessado
                </p>
                <p
                  class="sc-bxivhb Cdfip"
                >
                  João da Silva
                </p>
              </div>
              <div
                class="sc-bwzfXH EtGxv"
              >
                <p
                  class="sc-htpNat cWKNlF"
                >
                  Descrição
                </p>
                <p
                  class="sc-bxivhb Cdfip"
                >
                  Solicitação de licença-prêmio referente ao período 02/06/2015 - 01/06/2018
                </p>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="sc-ifAKCX eXALfk"
    >
      <li
        class="sc-EHOje dSogAF"
      >
        <div
          class="sc-bdVaJa cWtrlz"
        >
          <a
            href="/process-detail/process=c05a14b8-9f98-4e4d-908c-050e0c46a7f2"
            style="align-items: center; display: flex; flex-wrap: wrap; text-decoration: none; width: 100%;"
          >
            <div
              class="sc-bwzfXH EtGxv"
            >
              <img
                alt=""
                src="https://via.placeholder.com/80"
              />
            </div>
            <div
              class="sc-bwzfXH dGJtax"
            >
              <p
                class="sc-htpNat cWKNlF"
              >
                Número
              </p>
              <p
                class="sc-bxivhb Cdfip"
              >
                SOFT 2020/00001
              </p>
            </div>
            <div
              class="sc-bwzfXH EtGxv"
            >
              <p
                class="sc-htpNat cWKNlF"
              >
                Assunto
              </p>
              <p
                class="sc-bxivhb Cdfip"
              >
                Licença
              </p>
            </div>
            <div
              class="sc-bwzfXH dGJtax"
            >
              <p
                class="sc-htpNat cWKNlF"
              >
                Interessado
              </p>
              <p
                class="sc-bxivhb Cdfip"
              >
                João da Silva
              </p>
            </div>
            <div
              class="sc-bwzfXH EtGxv"
            >
              <p
                class="sc-htpNat cWKNlF"
              >
                Descrição
              </p>
              <p
                class="sc-bxivhb Cdfip"
              >
                Solicitação de licença-prêmio referente ao período 02/06/2015 - 01/06/2018
              </p>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
